examples/message-queue-integrations/simple/kubernetes/ingress_services/control_plane.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: control-plane
  namespace: llama-deploy-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: control-plane
  template:
    metadata:
      labels:
        app: control-plane
    spec:
      containers:
        - name: control-plane
          image: multi_workflows_app:latest
          imagePullPolicy: Never
          command:
            [
              "sh",
              "-c",
              "python -m multi_workflows_app.deployment.core -q 'simple' --disable-message-queue",
            ]
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: control-plane
  name: control-plane
  namespace: llama-deploy-demo
spec:
  selector:
    app: control-plane
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: control-plane
  namespace: llama-deploy-demo
spec:
  rules:
    - host: control-plane.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: control-plane
                port:
                  number: 8000
