examples/message-queue-integrations/simple/kubernetes/ingress_services/message_queue.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-queue
  namespace: llama-deploy-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-queue
  template:
    metadata:
      labels:
        app: message-queue
    spec:
      containers:
        - name: message-queue
          image: multi_workflows_app:latest
          imagePullPolicy: Never
          command:
            [
              "sh",
              "-c",
              "python -m multi_workflows_app.deployment.core -q 'simple' --disable-control-plane",
            ]
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: message-queue
  name: message-queue
  namespace: llama-deploy-demo
spec:
  selector:
    app: message-queue
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: message-queue
  namespace: llama-deploy-demo
spec:
  rules:
    - host: message-queue.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: message-queue
                port:
                  number: 8000
